ros2_ws/log/build_2026-01-15_03-23-48/vehicle_simulator/stdout_stderr.log
running egg_info
creating ../../build/vehicle_simulator/vehicle_simulator.egg-info
writing ../../build/vehicle_simulator/vehicle_simulator.egg-info/PKG-INFO
writing dependency_links to ../../build/vehicle_simulator/vehicle_simulator.egg-info/dependency_links.txt
writing entry points to ../../build/vehicle_simulator/vehicle_simulator.egg-info/entry_points.txt
writing requirements to ../../build/vehicle_simulator/vehicle_simulator.egg-info/requires.txt
writing top-level names to ../../build/vehicle_simulator/vehicle_simulator.egg-info/top_level.txt
writing manifest file '../../build/vehicle_simulator/vehicle_simulator.egg-info/SOURCES.txt'
reading manifest file '../../build/vehicle_simulator/vehicle_simulator.egg-info/SOURCES.txt'
writing manifest file '../../build/vehicle_simulator/vehicle_simulator.egg-info/SOURCES.txt'
running build
running build_py
creating /home/ziko/ros2_ws/build/vehicle_simulator/build
creating /home/ziko/ros2_ws/build/vehicle_simulator/build/lib
creating /home/ziko/ros2_ws/build/vehicle_simulator/build/lib/vehicle_simulator
copying vehicle_simulator/vehicle_simulator.py -> /home/ziko/ros2_ws/build/vehicle_simulator/build/lib/vehicle_simulator
copying vehicle_simulator/__init__.py -> /home/ziko/ros2_ws/build/vehicle_simulator/build/lib/vehicle_simulator
running install
running install_lib
creating /home/ziko/ros2_ws/install/vehicle_simulator/lib/python3.10/site-packages/vehicle_simulator
copying /home/ziko/ros2_ws/build/vehicle_simulator/build/lib/vehicle_simulator/vehicle_simulator.py -> /home/ziko/ros2_ws/install/vehicle_simulator/lib/python3.10/site-packages/vehicle_simulator
copying /home/ziko/ros2_ws/build/vehicle_simulator/build/lib/vehicle_simulator/__init__.py -> /home/ziko/ros2_ws/install/vehicle_simulator/lib/python3.10/site-packages/vehicle_simulator
byte-compiling /home/ziko/ros2_ws/install/vehicle_simulator/lib/python3.10/site-packages/vehicle_simulator/vehicle_simulator.py to vehicle_simulator.cpython-310.pyc
byte-compiling /home/ziko/ros2_ws/install/vehicle_simulator/lib/python3.10/site-packages/vehicle_simulator/__init__.py to __init__.cpython-310.pyc
  File "/home/ziko/ros2_ws/install/vehicle_simulator/lib/python3.10/site-packages/vehicle_simulator/vehicle_simulator.py", line 18
    // État de l'interface
                ^
SyntaxError: unterminated string literal (detected at line 18)

running install_data
creating /home/ziko/ros2_ws/install/vehicle_simulator/share/ament_index
creating /home/ziko/ros2_ws/install/vehicle_simulator/share/ament_index/resource_index
creating /home/ziko/ros2_ws/install/vehicle_simulator/share/ament_index/resource_index/packages
copying resource/vehicle_simulator -> /home/ziko/ros2_ws/install/vehicle_simulator/share/ament_index/resource_index/packages
copying package.xml -> /home/ziko/ros2_ws/install/vehicle_simulator/share/vehicle_simulator
running install_egg_info
Copying ../../build/vehicle_simulator/vehicle_simulator.egg-info to /home/ziko/ros2_ws/install/vehicle_simulator/lib/python3.10/site-packages/vehicle_simulator-0.0.0-py3.10.egg-info
running install_scripts
Installing vehicle_simulator script to /home/ziko/ros2_ws/install/vehicle_simulator/lib/vehicle_simulator
writing list of installed files to '/home/ziko/ros2_ws/build/vehicle_simulator/install.log'
